full-moon/tests/cfxlua_cases/fail/parser/multiplication_assignment_operator/source.lua
local base = 10
base *=
